--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 </head>
 <body>
 
-    <h1>This is heading 1</h1>
-    <h2>This is heading 2</h2>
-    <h3>This is heading 3</h3>
-
-    <p>This is a paragraph.</p>
+    <h1>My Article</h1>
     <br>
-    <p>This is another paragraph.</p> 
+
+    <p>This is another paragraph. This is another paragraph. This is another paragraph.
+         This is another paragraph. This is another paragraph.
+        This is another paragraph. This is another paragraph. This is another paragraph.
+    </p> 
     
 </body>
 </html>
