inline css and style tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Html School</title>
+    <style>
+        a {
+            font-size: 40px;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
 
@@ -13,7 +19,17 @@
     <p>This is another paragraph. This is another paragraph. This is another paragraph.
          This is another paragraph. This is another paragraph.
         This is another paragraph. This is another paragraph. This is another paragraph.
-    </p> 
+    </p>
+
+    <br>
+
+    <p style="color:red; font-size: 30px;">zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz</p>
+
+    <a href="https://www.w3schools.com">W3Schools Link</a>
+    <a href="https://www.w3schools.com">W3Schools Link</a>
+    <a href="https://www.w3schools.com">W3Schools Link</a>
+
+    <img src="./wolf.jpg" alt="wolfenstein Image" width="1000" height="1000"> 
     
 </body>
 </html>
